--- a/public/422.html
+++ b/public/422.html
@@ -18,9 +18,38 @@
 
 <body>
   <!-- This file lives in public/422.html -->
-  <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
-    <p>Maybe you tried to change something you didn't have access to.</p>
+  <section id="erreurs">
+  <%= render :partial => "shared/flash_messages" %>
+
+  <div class="container">
+	<div class="row">
+		<div class="row" id="intro">
+			Toutes nos excuses.
+		</div>
+	</div>
+    <div class="row">
+      <div class="span4" id ="petit-abo">
+		<div class="cadre13">
+			<div class="titre">
+			Erreur 422.
+			</div>
+			<div class="sous-titre">
+			<%= (["Ce n'est pas là. Enfin, ça y'est plus. Bref.","Sarah conner? C'est à coté","Eh Oui. Vous êtes une brebis égarée."]).shuffle.first%>
+			</div>
+		</div>
+	  </div>
+    </div>
+
+
+	<div class="row" id="intro2">
+		<%= link_to "Cliquez ici pour revenir dans le droit chemin.", root_path %>
+	</div>
+	<div class="row" id="photo-abonnement">
+	<%= link_to (image_tag('moutons-abonnement.png', :alt => 'Moutoners')), root_path %>
+	</div>
   </div>
+
+</section>
+
 </body>
 </html>
