--- a/public/404.html
+++ b/public/404.html
@@ -65,9 +65,8 @@
 		}
 
 		.sous-titre{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
-		font-weight: bold;
 		padding-top:20px;
 		text-align: left;
 		padding-left: 70px;
